Minor visual improvements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1><a class="no-underline" href="/">/jne/blog</a></h1>
+	<p>Posts about CTF-s, bug bounties, CVE-s etc</p>
+	<p>&hellip;</p>
     </header>
     <div class="listing">
         <h2><a href="posts/02.html">Pondering on CVE-2022-2216</a></h2>
