--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1><a class="no-underline" href="/">/jne/blog</a></h1>
 	<p>Posts about CTF-s, bug bounties, CVE-s etc</p>
-	<p>&hellip;</p>
+	<p style="letter-spacing: 15px">&bull; &bull; &bull;</p>
     </header>
     <div class="listing">
         <h2><a href="posts/02.html">Pondering on CVE-2022-2216</a></h2>
