--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header>
+	<img src="pics/banner.png" class="banner">
         <h1><a class="no-underline" href="/">/jne/blog</a></h1>
 	<p>Posts about CTF-s, bug bounties, CVE-s etc</p>
-	<hr class="dinkus"/>
+	<hr />
     </header>
     <div class="listing">
         <h2><a href="posts/02.html">Pondering on CVE-2022-2216</a></h2>
