--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>/jne/blog</title>
+    <title>rogue code revelations</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
     <header>
-	<img src="pics/banner.png" class="banner">
-        <h1><a class="no-underline" href="/">/jne/blog</a></h1>
-	<p>Posts about CTF-s, bug bounties, CVE-s etc</p>
+	<img src="pics/banner.svg" class="banner">
+	<p>My netrunning journey of CTF-s, bug bounties, CVE-s and so on</p>
 	<hr />
     </header>
     <div class="listing">
