--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<hr />
     </header>
     <div class="listing">
+        <h2><a href="posts/03.html">Hack The Box - Sau</a></h2>
+        <span class="date">February 21, 2024</span>
         <h2><a href="posts/02.html">Pondering on CVE-2022-2216</a></h2>
         <span class="date">December 20, 2023</span>
         <h2><a href="posts/01.html">Hack The Box - Soccer</a></h2>
