--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
 	<img src="pics/banner.svg" class="banner">
-	<p>My netrunning journey of CTF-s, bug bounties, CVE-s and so on</p>
-	<hr />
     </header>
     <div class="listing">
+        <h2><a href="posts/05.html">Pondering on GHSA-wm25-j4gw-6vr3</a></h2>
+        <span class="date">August 14, 2024</span>
         <h2><a href="posts/04.html">Pondering on CVE-2023-7028 - don't forget me, Gitlab!</a></h2>
         <span class="date">April 22, 2024</span>
         <h2><a href="posts/03.html">Hack The Box - Sau</a></h2>
