--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header>
 	<img src="pics/banner.svg" class="banner">
+	<p>Roleplaying as a hacker</p>
+	<hr />
     </header>
     <div class="listing">
         <h2><a href="posts/05.html">Pondering on GHSA-wm25-j4gw-6vr3</a></h2>
